templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chart1
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  type: LoadBalancer
  selector:
    app: chart1

--

apiVersion: v1
kind: Service
metadata:
  name: chart2
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  type: LoadBalancer
  selector:
    app: chart1
