templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chart1
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: chart1.34.121.11.20.nip.io 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chart1
                port:
                  number: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chart2
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: chart1.34.121.11.20.nip.io 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chart1
                port:
                  number: 8080
